# thewhisper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  render.yaml
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/migrations/: env.py
backend/migrations/versions/: 11647a2af7ce_profile_photo_discovery.py  7c41f0a9d2b3_dialogue.py  9bae5c681db1_initial_identity_gamification.py  9bc813e13279_betting_bet_round_bet_stake.py
backend/src/whisper/: __init__.py  db_metadata.py  main.py  settings.py
backend/src/whisper/betting/core/: enums.py  services.py  templates.py
backend/src/whisper/betting/infrastructure/: job.py  models.py  queries.py  router.py  service.py
backend/src/whisper/dialogue/core/: entities.py  enums.py  repositories.py  services.py  use_cases.py
backend/src/whisper/dialogue/infrastructure/: models.py  queries.py  repositories.py  router.py  schemas.py
backend/src/whisper/discovery/core/: entities.py  enums.py  repositories.py  use_cases.py
backend/src/whisper/discovery/infrastructure/: models.py  queries.py  repositories.py  router.py  schemas.py
backend/src/whisper/gamification/infrastructure/: deps.py  models.py  points_service.py  queries.py  router.py
backend/src/whisper/identity/core/: entities.py  repositories.py  services.py  use_cases.py
backend/src/whisper/identity/infrastructure/: models.py  repositories.py  router.py  schemas.py  security.py
backend/src/whisper/photo/core/: entities.py  enums.py  ports.py  repositories.py  use_cases.py
(+77 files in other folders)
